--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "antd": "^3.11.1",
+    "axios": "^0.18.0",
     "immutable": "^4.0.0-rc.12",
+    "moment": "^2.22.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-loadable": "^5.5.0",
